EXOGTN-729 Small UI issue in Change Language Dialog: Scroller is visible while it is not necessary

--- a/web/eXoResources/src/main/webapp/skin/DefaultSkin/portal/webui/component/customization/UIChangeLanguageForm/Stylesheet.css
+++ b/web/eXoResources/src/main/webapp/skin/DefaultSkin/portal/webui/component/customization/UIChangeLanguageForm/Stylesheet.css
@@ -53,8 +53,7 @@
 
 .UIChangeLanguageForm .UIItemSelector .RightColumnStyle .ItemDetailList .ItemDetail {
 	border: none; 
-	height: 227px; 
-	overflow: auto;
+	height: auto; 
 	margin: 0px; 
 }
 
